force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>VCC_Active_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current Activation State of Clinic</description>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>