force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Appointment_Length__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Length__c</fullName>
    <description>Length of Appointment</description>
    <label>Appointment Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>