force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Medical_Center__c.field-meta.xml
<CustomField>
    <fullName>VCC_Medical_Center__c</fullName>
    <description>The medical center associated with the Clinic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Center</label>
    <length>25</length>
    <type>Text</type>
</CustomField>