force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Overbooking_Limit_Max_OB__c.field-meta.xml
<CustomField>
    <fullName>VCC_Overbooking_Limit_Max_OB__c</fullName>
    <description>Overbooks per day maximum</description>
    <label>Overbooking Limit/Max OB</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>