force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>VCC_Special_Instructions__c</fullName>
    <description>Special instructions for scheduling at this Clinic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Instructions</label>
    <type>TextArea</type>
</CustomField>