force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Station_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_Station_Id__c</fullName>
    <description>Parent Facility Id associated with Clinic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Station Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>