force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Stop_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC_Stop_Code__c</fullName>
    <description>Captures the stop code number of the clinic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop Code #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>