force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Telephone_Extension__c.field-meta.xml
<CustomField>
    <fullName>VCC_Telephone_Extension__c</fullName>
    <description>The phone extension for the clinic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Telephone Extension</label>
    <length>3</length>
    <type>Text</type>
</CustomField>