force-app/main/default/objects/VCC_Clinic__c/fields/VCC_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>VCC_Time_Zone__c</fullName>
    <description>The time zone of the facility, determined by the associated division.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Zone</label>
    <length>19</length>
    <type>Text</type>
</CustomField>