force-app/main/default/objects/VCC_Clinic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VCC_Active_Flag__c</columns>
    <columns>VCC_IEN__c</columns>
    <columns>VCC_Station_Id__c</columns>
    <columns>VCC_Time_Zone__c</columns>
    <columns>VCC_Variable_Length_appt_indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>